--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=5.0, user-scalable=no" />
+    <meta name="viewport" content="width=user-device, initial-scale=1.0, maximum-scale=5.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
 
     <link rel="stylesheet" href="styles/App.css">
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/LoginStyles.css">
     <link rel="stylesheet" href="styles/SignupStyles.css">
     <link rel="stylesheet" href="styles/SettingsStyles.css">
+    <link rel="stylesheet" href="styles/MediaQueries.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@600;900&family=Source+Sans+Pro&display=swap" rel="stylesheet">
