add 2 stages of 'responsiveness' of the about section

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
     <link rel="stylesheet" href="styles/LoginStyles.css">
     <link rel="stylesheet" href="styles/SignupStyles.css">
     <link rel="stylesheet" href="styles/SettingsStyles.css">
-    <link rel="stylesheet" href="styles/MediaQueries.css">
+    <link rel="stylesheet" href="styles/mediaQueries/sub1650px.css">
+    <link rel="stylesheet" href="styles/mediaQueries/sub1350px.css">
+    <link rel="stylesheet" href="styles/mediaQueries/sub1100px.css">
+    <link rel="stylesheet" href="styles/mediaQueries/sub725px.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@600;900&family=Source+Sans+Pro&display=swap" rel="stylesheet">
