--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
 
     <link rel="stylesheet" href="styles/App.css">
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="styles/mediaQueries/sub1650px.css">
     <link rel="stylesheet" href="styles/mediaQueries/sub1350px.css">
     <link rel="stylesheet" href="styles/mediaQueries/sub1100px.css">
-    <link rel="stylesheet" href="styles/mediaQueries/sub725px.css">
+    <link rel="stylesheet" href="styles/mediaQueries/sub800px.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@600;900&family=Source+Sans+Pro&display=swap" rel="stylesheet">
