--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>name-ethnicity-classifier</title>
+    <title>name-to-ethnicity</title>
   </head>
   <body>
     
