added an API doc page

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="styles/LoginStyles.css">
     <link rel="stylesheet" href="styles/SignupStyles.css">
     <link rel="stylesheet" href="styles/SettingsStyles.css">
+    <link rel="stylesheet" href="styles/ApiDocumentationStyles.css">
+
     <link rel="stylesheet" href="styles/mediaQueries/sub1650px.css">
     <link rel="stylesheet" href="styles/mediaQueries/sub1350px.css">
     <link rel="stylesheet" href="styles/mediaQueries/sub1100px.css">
