--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="A free, customizable, machine learning based name ethnicity classifier. You choose just the nationalities you need, and we train your custom model for free."/>
 
     <link rel="stylesheet" href="styles/App.css">
     <link rel="stylesheet" href="styles/PresentStyles.css">
