add self hosted google fonts

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="A free, customizable, machine learning based name ethnicity classifier. You choose just the nationalities you need, and we train your custom model for free."/>
 
+    <link rel="stylesheet" href="styles/fonts.css">
+
     <link rel="stylesheet" href="styles/App.css">
     <link rel="stylesheet" href="styles/PresentStyles.css">
     <link rel="stylesheet" href="styles/DatasetChoosingStyles.css">
@@ -26,8 +28,10 @@
     <link rel="stylesheet" href="styles/mediaQueries/sub1100px.css">
     <link rel="stylesheet" href="styles/mediaQueries/sub800px.css">
 
+    <!--
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@600;900&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    -->
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
